# transformer_from_scratch

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
tests/: test_tokenizer.py  test_training.py  test_transformer.py
transformer_from_scratch/: tokenizer.py  transformer.py
