[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = ""
authors = ["GrossBetruger <koriatoren@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.3"
torch = "^2.6.0"
tiktoken = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
