[tool.poetry]
name = "transformer-from-scratch"
version = "0.1.0"
description = "A simple transformer implementation from scratch"
authors = ["GrossBetruger"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.32.3"
torch = "^2.6.0"
tiktoken = "^0.9.0"
numpy = "^2.2.3"
pytest = "^8.3.5"
pandas = "^2.2.3"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
